--- a/ishop-modules/authorization/build.gradle
+++ b/ishop-modules/authorization/build.gradle
@@ -1,15 +1,6 @@
-plugins {
-	id 'org.springframework.boot' version '2.7.2'
-	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
-	id 'java'
-}
-
-repositories {
-	mavenCentral()
-}
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation project(':ishop-common:common-sdk')
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
