--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.7.2'
     id 'io.spring.dependency-management' version '1.0.12.RELEASE'
+    id "io.freefair.lombok" version "6.5.0.3"
 }
 
 subprojects {
@@ -12,5 +13,7 @@ configure(subprojects.findAll {it.name != 'ishop-common' && it.name != 'ishop-mo
     apply plugin: "java"
     apply plugin: "org.springframework.boot"
     apply plugin: "io.spring.dependency-management"
+    apply plugin: "io.freefair.lombok"
+
 }
 
