--- a/ishop-modules/product-managment/build.gradle
+++ b/ishop-modules/product-managment/build.gradle
@@ -3,6 +3,7 @@ dependencies {
 	implementation project(':ishop-common:common-sdk')
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.data:spring-data-elasticsearch'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
