--- a/ishop-modules/product-managment/src/main/resources/application.yml
+++ b/ishop-modules/product-managment/src/main/resources/application.yml
@@ -3,6 +3,9 @@
 elastic:
   hostname: 127.0.0.1:9200
 
+springdoc:
+  api-docs:
+    path: /api-docs
 
 #docker run -p 9200:9200 --name elasticsearch bitnami/elasticsearch:latest
 # 137.184.244.199:9200/_cat/indices?h=index  get all indices
