--- a/ishop-common/common-sdk/build.gradle
+++ b/ishop-common/common-sdk/build.gradle
@@ -17,5 +17,6 @@ dependencyManagement {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	api 'org.springdoc:springdoc-openapi-ui:1.6.9'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
