--- a/ishop-infrastructure/docker-compose.yml
+++ b/ishop-infrastructure/docker-compose.yml
@@ -1,5 +1,13 @@
 version: "3.9"
 services:
+  db:
+    container_name: pg-container
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: admin
+    ports:
+      - 5432:5432
   elasticsearch:
     container_name: es-container
     image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
