Add categories init script

--- a/ishop-modules/product-managment/src/main/resources/application.yml
+++ b/ishop-modules/product-managment/src/main/resources/application.yml
@@ -11,14 +11,10 @@ spring:
     show-sql: true
     hibernate:
          format_sql: true
-         ddl-auto: update
+         ddl-auto: create
          dialect: org.hibernate.dialect.PostgreSQLDialect
 elastic:
   hostname: 127.0.0.1:9200
 springdoc:
   api-docs:
     path: /api-docs
-
-#docker run -p 9200:9200 --name elasticsearch bitnami/elasticsearch:latest
-# 137.184.244.199:9200/_cat/indices?h=index  get all indices
-# 137.184.244.199:9200/product-store/_search  get all document for the index product-store
