--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,11 @@ subprojects {
         mavenCentral()
     }
 }
-configure(subprojects.findAll {it.name != 'ishop-common' && it.name != 'ishop-modules' }) {
+configure(subprojects.findAll {it.name != 'ishop-common' &&
+        it.name != 'ishop-modules' && it.name != 'ishop-bom' && it.name !="ishop-gradle-plugin"}) {
     apply plugin: "java"
     apply plugin: "org.springframework.boot"
     apply plugin: "io.spring.dependency-management"
     apply plugin: "io.freefair.lombok"
-
 }
 
