--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include 'ishop-modules:product-managment'
 include 'ishop-modules:order-managment'
 include 'ishop-modules:shipping-managment'
 include 'ishop-modules:authorization'
+include 'ishop-gradle-plugin:ishop-bom'
 
 
 
