--- a/ishop-modules/product-managment/build.gradle
+++ b/ishop-modules/product-managment/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: "groovy"
 
 dependencies {
 	implementation project(':ishop-common:common-sdk')
@@ -9,6 +10,8 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.4.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation "org.spockframework:spock-core:2.1-groovy-3.0"
+
 }
 
 tasks.named('test') {
