--- a/ishop-modules/product-managment/build.gradle
+++ b/ishop-modules/product-managment/build.gradle
@@ -1,16 +1,24 @@
 apply plugin: "groovy"
 
+ext {
+	mapstructVersion = "1.5.2.Final"
+	lombokVersion = "1.18.20"
+	lombokMapstructBindingVersion = "0.2.0"
+}
 dependencies {
 	implementation project(':ishop-common:common-sdk')
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.data:spring-data-elasticsearch'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+
+	implementation "org.mapstruct:mapstruct:${mapstructVersion}", "org.projectlombok:lombok:${lombokVersion}"
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}", "org.projectlombok:lombok:${lombokVersion}", "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
+
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.4.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation "org.spockframework:spock-core:2.1-groovy-3.0"
+	testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.2-M3-groovy-4.0'
+	testImplementation group: 'org.spockframework', name: 'spock-spring', version: '2.2-M3-groovy-4.0'
 
 }
 
