--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,6 @@ configure(subprojects.findAll {it.name != 'ishop-common' && it.name != 'ishop-mo
     apply plugin: "org.springframework.boot"
     apply plugin: "io.spring.dependency-management"
     apply plugin: "io.freefair.lombok"
-
+    apply plugin: "jacoco"
 }
 
