Add gradle custom bom to all projects

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,13 @@ plugins {
 subprojects {
     repositories {
         mavenCentral()
+        maven {
+            url = uri("https://maven.pkg.github.com/e2rabi/IShop")
+            credentials {
+                username = "errabi.ayoub@gmail.com"
+                password = "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"
+            }
+        }
     }
 }
 configure(subprojects.findAll {it.name != 'ishop-common' &&
