--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,9 @@
 group = 'com.errabi'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+mapstructVersion = 1.5.2.Final
+lombokVersion = 1.18.20
+lombokMapstructBindingVersion = 0.2.0
+
+ishopBomVersion = 1.0.9-SNAPSHOT
