--- a/ishop-gradle-plugin/ishop-bom/gradle.properties
+++ b/ishop-gradle-plugin/ishop-bom/gradle.properties
@@ -1,2 +1,7 @@
 
 springBootVersion=2.7.2
+mapstructVersion = 1.5.2.Final
+lombokVersion = 1.18.20
+lombokMapstructBindingVersion = 0.2.0
+ishopBomVersion = 1.0.9-SNAPSHOT
+springBootDependenciesVersion = 3.0.0-RC3
