--- a/ishop-modules/order-managment/build.gradle
+++ b/ishop-modules/order-managment/build.gradle
@@ -1,10 +1,16 @@
 
 dependencies {
+
+	// Load bill of materials (BOM).
+	// The dependencies in the BOM will be
+	// dependency constraints in this build.
+	implementation enforcedPlatform("com.errabi:ishop-bom:${ishopBomVersion}")
+
 	implementation project(':ishop-common:common-sdk')
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.named('test') {
+test{
 	useJUnitPlatform()
 }
