--- a/ishop-modules/product-managment/build.gradle
+++ b/ishop-modules/product-managment/build.gradle
@@ -1,21 +1,26 @@
 apply plugin: "groovy"
 
-ext {
-	mapstructVersion = "1.5.2.Final"
-	lombokVersion = "1.18.20"
-	lombokMapstructBindingVersion = "0.2.0"
-}
+
 dependencies {
+	// Load bill of materials (BOM).
+	// The dependencies in the BOM will be
+	// dependency constraints in this build.
+	implementation enforcedPlatform("com.errabi:ishop-bom:${ishopBomVersion}")
 	implementation project(':ishop-common:common-sdk')
+
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.data:spring-data-elasticsearch'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-	implementation "org.mapstruct:mapstruct:${mapstructVersion}", "org.projectlombok:lombok:${lombokVersion}"
-	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}", "org.projectlombok:lombok:${lombokVersion}", "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
+	implementation 'org.mapstruct:mapstruct'
+	implementation group: 'org.projectlombok',name: 'lombok'
 
-	implementation group: 'org.postgresql', name: 'postgresql', version: '42.4.1'
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
+
+	implementation group: 'org.postgresql', name: 'postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.2-M3-groovy-4.0'
 	testImplementation group: 'org.spockframework', name: 'spock-spring', version: '2.2-M3-groovy-4.0'
@@ -27,6 +32,6 @@ test {
 jacocoTestReport {
 	dependsOn test
 }
-tasks.named('test') {
+test{
 	useJUnitPlatform()
 }
