Update project structure

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ local.properties
 /ishop-gateway/build/**
 /ishop-gradle-plugin/ishop-bom/build/**
 /ishop-gradle-plugin/build/**
+/ishop-infrastructure/build/**
 ######################
 # Package Files
 ######################
@@ -152,3 +153,4 @@ Desktop.ini
 /ishop-common/build/
 /ishop-gateway/build/bootJarMainClassName
 /ishop-gradle-plugin/ishop-bom/build/
+/ishop-infrastructure/build/
