Update project structure

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,14 @@
+org.gradle.caching = true
+org.gradle.daemon = true
+org.gradle.parallel = true
+org.gradle.jvmargs = -Xmx4g -Dfile.encoding=UTF8 -Duser.country=EN -Duser.language=en
+
 group = 'com.errabi'
 version = '0.0.1-SNAPSHOT'
+
 sourceCompatibility = '11'
+targetCompatibility = '11'
+
 
 mapstructVersion = 1.5.2.Final
 lombokVersion = 1.18.20
