Add category service test h2 memory db

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,4 @@ Desktop.ini
 /ishop-gateway/build/bootJarMainClassName
 /ishop-gradle-plugin/ishop-bom/build/
 /ishop-infrastructure/build/
+/ishop-lifecycle/build/
