Add gradle release plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ mapstructVersion = 1.5.2.Final
 lombokVersion = 1.18.20
 lombokMapstructBindingVersion = 0.2.0
 
-ishopBomVersion = 1.0.10-SNAPSHOT
+ishopBomVersion = 1.0.10
