--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,41 @@
+import java.util.regex.Matcher
+
 plugins {
     id 'org.springframework.boot' version '2.7.2'
     id 'io.spring.dependency-management' version '1.0.12.RELEASE'
     id "io.freefair.lombok" version "6.5.0.3"
-}
+    id 'net.researchgate.release' version '3.0.0'
 
+}
+release {
+    failOnCommitNeeded = true
+    failOnPublishNeeded = true
+    failOnSnapshotDependencies = true
+    failOnUnversionedFiles = true
+    failOnUpdateNeeded = true
+    revertOnFail = true
+    preCommitText = ''
+    preTagCommitMessage = '[Gradle Release Plugin] - pre tag commit: '
+    tagCommitMessage = '[Gradle Release Plugin] - creating tag: '
+    newVersionCommitMessage = '[Gradle Release Plugin] - new version commit: '
+    tagTemplate = '${version}'
+    versionPropertyFile = 'gradle.properties'
+    versionProperties = []
+    snapshotSuffix = '-SNAPSHOT'
+    buildTasks = ['build']
+    ignoredSnapshotDependencies = []
+    versionPatterns = [
+            /(\d+)([^\d]*$)/: { Matcher m, Project p -> m.replaceAll("${(m[0][1] as int) + 1}${m[0][2]}") }
+    ]
+    pushReleaseVersionBranch = null
+    scmAdapters = [
+            net.researchgate.release.GitAdapter,
+            net.researchgate.release.SvnAdapter,
+            net.researchgate.release.HgAdapter,
+            net.researchgate.release.BzrAdapter
+    ]
+
+}
 subprojects {
     repositories {
         mavenCentral()
@@ -11,7 +43,7 @@ subprojects {
             url = uri("https://maven.pkg.github.com/e2rabi/IShop")
             credentials {
                 username = "errabi.ayoub@gmail.com"
-                password = "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"
+                password = "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"
             }
         }
     }
