[Gradle Release Plugin] - pre tag commit:  ' 1.0.0'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel = true
 org.gradle.jvmargs = -Xmx4g -Dfile.encoding=UTF8 -Duser.country=EN -Duser.language=en
 
 group = 'com.errabi'
-version = '0.0.1-SNAPSHOT'
+version =  1.0.0
 
 sourceCompatibility = '11'
 targetCompatibility = '11'
