[Gradle Release Plugin] - new version commit:  '1.0.2-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel = true
 org.gradle.jvmargs = -Xmx4g -Dfile.encoding=UTF8 -Duser.country=EN -Duser.language=en
 
 group = 'com.errabi'
-version =  1.0.1
+version =  1.0.2-SNAPSHOT
 
 sourceCompatibility = '11'
 targetCompatibility = '11'
