Add Product service unit test

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.jvmargs = -Xmx4g -Dfile.encoding=UTF8 -Duser.country=EN -Duser.langua
 
 group = 'com.errabi'
 version =  1.0.2-SNAPSHOT
+description = "IShop is a simple e-commerce application to learn advanced microservices topics"
 
 sourceCompatibility = '11'
 targetCompatibility = '11'
