--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,8 @@ subprojects {
 }
 configure(subprojects.findAll {it.name != 'ishop-common' &&
         it.name != 'ishop-modules' && it.name != 'ishop-bom' && it.name !="ishop-gradle-plugin"}) {
-    apply plugin: "java"
-    apply plugin: "org.springframework.boot"
+    apply plugin: "java" // apply is a groovy method call apply(map) apply(plugin:java)
+    apply plugin: "org.springframework.boot" // method apply is implicitly applyed on a project apply plugin: "java" == project.apply(plugin:java)
     apply plugin: "io.spring.dependency-management"
     apply plugin: "io.freefair.lombok"
     apply plugin: "jacoco"
