--- a/ishop-modules/authorization/build.gradle
+++ b/ishop-modules/authorization/build.gradle
@@ -1,16 +1,38 @@
+apply plugin: "groovy"
 
 dependencies {
-
 	// Load bill of materials (BOM).
 	// The dependencies in the BOM will be
 	// dependency constraints in this build.
 	implementation enforcedPlatform("com.errabi:ishop-bom:${ishopBomVersion}")
-
 	implementation project(':ishop-common:common-sdk')
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
 
+	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.data:spring-data-elasticsearch'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	implementation 'org.mapstruct:mapstruct'
+	implementation group: 'org.projectlombok',name: 'lombok'
+
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
+
+	implementation group: 'org.postgresql', name: 'postgresql'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.2-M3-groovy-4.0'
+	testImplementation group: 'org.spockframework', name: 'spock-spring', version: '2.2-M3-groovy-4.0'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	testRuntimeOnly 'com.h2database:h2'
+}
+test {
+	finalizedBy jacocoTestReport
+}
+jacocoTestReport {
+	dependsOn test
+}
 test{
 	useJUnitPlatform()
 }
