--- a/ishop-modules/authorization/build.gradle
+++ b/ishop-modules/authorization/build.gradle
@@ -12,6 +12,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
 
 	implementation 'org.mapstruct:mapstruct'
 	implementation group: 'org.projectlombok',name: 'lombok'
@@ -25,7 +26,7 @@ dependencies {
 	testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.2-M3-groovy-4.0'
 	testImplementation group: 'org.spockframework', name: 'spock-spring', version: '2.2-M3-groovy-4.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testRuntimeOnly 'com.h2database:h2'
+	implementation 'com.h2database:h2'
 }
 test {
 	finalizedBy jacocoTestReport
