--- a/ishop-modules/authorization/src/main/resources/application.yaml
+++ b/ishop-modules/authorization/src/main/resources/application.yaml
@@ -18,4 +18,11 @@ spring:
       path: /h2-console
 logging:
   level:
-    root: DEBUG
+    root: info
+ishop:
+  jwt:
+    keystore-passe: errabi
+    key-passe: errabi
+    key-alias: ishop
+    keystore-path: classpath:keystore.jks
+    expire-seconds: 30000
