Add User API unit test

--- a/ishop-modules/authorization/src/main/resources/application.yaml
+++ b/ishop-modules/authorization/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
     password:
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     show-sql: true
   h2:
     console:
