Trace user login actions success and failures

--- a/ishop-modules/authorization/src/main/resources/application.yaml
+++ b/ishop-modules/authorization/src/main/resources/application.yaml
@@ -20,6 +20,9 @@ logging:
   level:
     root: info
 ishop:
+  user:
+    lock:
+      attempts: 3
   jwt:
     keystore-passe: errabi
     key-passe: errabi
