--- a/ishop-gradle-plugin/ishop-bom/gradle.properties
+++ b/ishop-gradle-plugin/ishop-bom/gradle.properties
@@ -3,5 +3,7 @@ springBootVersion=2.7.2
 mapstructVersion = 1.5.2.Final
 lombokVersion = 1.18.20
 lombokMapstructBindingVersion = 0.2.0
-ishopBomVersion = 1.0.10
+ishopBomVersion = 1.0.11
 springBootDependenciesVersion = 3.0.0-RC3
+nimbusJoseJwtVersion = 9.24.3
+guavaVersion = 11.0.2
