--- a/ishop-modules/authorization/build.gradle
+++ b/ishop-modules/authorization/build.gradle
@@ -15,6 +15,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'com.warrenstrange:googleauth:1.5.0'
+
 
 	implementation 'org.mapstruct:mapstruct'
 	implementation group: 'org.projectlombok',name: 'lombok'
