update k8s deployment file

--- a/ishop-infrastructure/deployments/ishop-authorization/ishop-authorization-deployment.yaml
+++ b/ishop-infrastructure/deployments/ishop-authorization/ishop-authorization-deployment.yaml
@@ -2,11 +2,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ishop-authorization
-  namespace: development
+  namespace: dev
   labels:
     app: ishop-authorization
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: ishop-authorization
@@ -18,3 +18,17 @@ spec:
       containers:
         - name: ishop-authorization
           image: e2rabi11/authorization:1.0.2-SNAPSHOT
+          ports:
+          - containerPort: 8080
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 20
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
+            initialDelaySeconds: 15
+            periodSeconds: 10
