--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel = true
 org.gradle.jvmargs = -Xmx4g -Dfile.encoding=UTF8 -Duser.country=EN -Duser.language=en
 
 group = 'com.errabi'
-version =  1.0.2
+version =  1.0.3-SNAPSHOT
 description = "IShop is a simple e-commerce application to learn advanced microservices topics"
 
 sourceCompatibility = '11'
