--- a/ishop-infrastructure/deployments/ishop-authorization/ishop-authorization-ingress.yaml
+++ b/ishop-infrastructure/deployments/ishop-authorization/ishop-authorization-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ishop-authorization-ingress
-  namespace: development
+  namespace: dev
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
