--- a/ishop-infrastructure/deployments/ishop-authorization/ishop-authorization-service.yaml
+++ b/ishop-infrastructure/deployments/ishop-authorization/ishop-authorization-service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ishop-authorization-service
-  namespace: development
+  namespace: dev
 spec:
+  type: NodePort
   selector:
     app: ishop-authorization
   ports:
     - protocol: TCP
       port: 80
       targetPort: 8080
-      nodePort: 30007
