Update login response

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,4 @@ Desktop.ini
 /ishop-gradle-plugin/ishop-bom/build/
 /ishop-infrastructure/build/
 /ishop-lifecycle/build/
+/ishop-modules/ishop-authorization/build/
