Add ishop authorization module helm chart

--- a/ishop-infrastructure/k8s/ishop-authorization/ishop-authorization-deployment.yaml
+++ b/ishop-infrastructure/k8s/ishop-authorization/ishop-authorization-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: ishop-authorization
-          image: e2rabi11/authorization:1.0.2-SNAPSHOT
+          image: e2rabi11/ishop-authorization:1.0.3-SNAPSHOT
           ports:
           - containerPort: 8080
           livenessProbe:
