--- a/ishop-infrastructure/helm/chart-ishop-authorization/templates/ishop-authorization-service.yaml
+++ b/ishop-infrastructure/helm/chart-ishop-authorization/templates/ishop-authorization-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ishop-authorization-service
+  name: {{.Values.service.name}}
   namespace: dev
 spec:
   type: NodePort
