--- a/ishop-gradle-plugin/ishop-bom/gradle.properties
+++ b/ishop-gradle-plugin/ishop-bom/gradle.properties
@@ -1,5 +1,6 @@
 
 springBootVersion=2.7.2
+springCloudVersion=3.1.4
 mapstructVersion = 1.5.2.Final
 lombokVersion = 1.18.20
 lombokMapstructBindingVersion = 0.2.0
