--- a/ishop-modules/product-managment/build.gradle
+++ b/ishop-modules/product-managment/build.gradle
@@ -1,7 +1,32 @@
-apply plugin: "groovy"
+plugins {
+	id "com.google.protobuf" version "0.9.2"
+	id "groovy"
+}
 
+def grpcVersion = '1.29.0'
+
+protobuf {
+	protoc {
+		artifact = 'com.google.protobuf:protoc:3.12.2'
+	}
+
+	plugins {
+		grpc {
+			artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
+		}
+	}
+	generateProtoTasks {
+		all()*.plugins {
+			grpc {}
+		}
+	}
+}
 
 dependencies {
+	implementation "io.grpc:grpc-netty:${grpcVersion}"
+	implementation "io.grpc:grpc-protobuf:${grpcVersion}"
+	implementation "io.grpc:grpc-stub:${grpcVersion}"
+	implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.12.2'
 	// Load bill of materials (BOM).
 	// The dependencies in the BOM will be
 	// dependency constraints in this build.
