--- a/ishop-gradle-plugin/ishop-bom/gradle.properties
+++ b/ishop-gradle-plugin/ishop-bom/gradle.properties
@@ -4,7 +4,9 @@ springCloudVersion=3.1.4
 mapstructVersion = 1.5.2.Final
 lombokVersion = 1.18.20
 lombokMapstructBindingVersion = 0.2.0
-ishopBomVersion = 1.0.11
+ishopBomVersion = 1.0.13
 springBootDependenciesVersion = 3.0.0-RC3
 nimbusJoseJwtVersion = 9.24.3
 guavaVersion = 11.0.2
+grpcVersion = 1.29.0
+grpcProtobuf = 3.12.2
